# TamaGit--SNA-Final-Project-2026

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: demo_scenarios.md
src/: github_integration.py  main.py  models.py  storage.py  ui.py
tests/: test_storage.py
