[tool.poetry]
name = "gittama"
version = "0.1.0"
description = "Терминальный тамагочи для GitHub"
authors = ["Ты <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.1"

[tool.poetry.scripts]
gittama = "src.main:main"
