[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gittama"
version = "0.1.0"
description = "GitTama — Terminal Tamagotchi for GitHub and DevOps habits"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
gittama = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
